--- a/index.html
+++ b/index.html
@@ -103,8 +103,16 @@
         <p id="vicino"> you don't know Italian? See <a href="https://just-a-booklover.github.io/just-a-bookworm.github.io-english/">here</a> the English version ;) !</p>
         </div>
     <p>Quando l'hanno annullata ci sono rimasta un po' male, ovviamente, ma capisco che non si poteva fare altrimenti.<br>
-        Non sono mai andata ad un pride con l'intenzione di andarci (l'anno scorso quando ero in vacanza-studio a Dublino siamo andati in gita a Belfast e - ooooops! - c'era il pride). <em>Metto qui sotto delle foto.</em> 
+        Non sono mai andata ad un pride con l'intenzione di andarci (l'anno scorso quando ero in vacanza-studio a Dublino siamo andati in gita a Belfast e - ooooops! - c'era il pride). <em>Metto qui sotto delle foto.</em> <br>
         <img src="https://www.flickr.com/photos/189142685@N06/50062141692/in/dateposted-public/" style="float: left; width: 400px;"><img src="https://www.flickr.com/photos/189142685@N06/50062141457/in/dateposted-public/" style="float: left; width: 300px;"><img src="https://www.flickr.com/photos/189142685@N06/50061892601/in/dateposted-public/" style="float: left; width: 300px;">
-        
+      In ogni caso non ho veramente partecipato, sono stata più che altro una spettatrice, ma lì ho deciso che avrei visto il pride 2020.<br>  
+      Ho aspettato il pride virtuale 2020 con ansia, ma alla fine non mi è piacito moltissimo: ho guardato solo pochi spezzoni quando avevo tempo, in totale sarà stata un'ora, ma mi è sembrato disorganizzato, troppo frammentato. Ogni persona che parlava lo faceva per un minuto al massimo, e poi si passava subito ad un altro, che diceva o mostrava qualcosa di completamente diverso. E poi i brani: inseriti quasi casualmente nel video... <br>
+      Non so, da come era descritto nel <a href="https://www.globalpride2020.org/">sito ufficiale</a> mi aspettavo di meglio...<br>
+      A questo punto spero di riuscire ad andare a Milano l'anno prossimo :) .
+    </p>
+    <p>Voi avete seguito il pride? Come vi è sembrato?<br>
+        Ditemi pure la vostra opinione su <a href="https://tellonym.me/ranalettrice">Tellonym</a> ;) .
     </p>
 </div>
+    </body>
+</html>
