--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
     <p>Quando l'hanno annullata ci sono rimasta un po' male, ovviamente, ma capisco che non si poteva fare altrimenti.<br>
         Non sono mai andata ad un pride con l'intenzione di andarci (l'anno scorso quando ero in vacanza-studio a Dublino siamo andati in gita a Belfast e - ooooops! - c'era il pride). <em>Metto qui sotto delle foto.</em> <br>
-        <img src="https://live.staticflickr.com/65535/50062141692_d28a13b6a7.jpg" style="float: left; width: 400px; margin: 5px;"><img src="https://live.staticflickr.com/65535/50061892601_64b93002ef.jpg" style="float: right; width: 300px; margin: 5px;">
+        <img src="https://live.staticflickr.com/65535/50062141692_d28a13b6a7.jpg" style="float: left; width: 400px; margin: 5px;">
       In ogni caso non ho veramente partecipato, sono stata più che altro una spettatrice, ma lì ho deciso che avrei visto il pride 2020.<img src="https://live.staticflickr.com/65535/50062141457_18fa47e8d7.jpg" style="float: left; width: 300px; margin: 5px;"><br>  
       Ho aspettato il pride virtuale 2020 con ansia, ma alla fine non mi è piacito moltissimo: ho guardato solo pochi spezzoni quando avevo tempo, in totale sarà stata un'ora, ma mi è sembrato disorganizzato, troppo frammentato. Ogni persona che parlava lo faceva per un minuto al massimo, e poi si passava subito ad un altro, che diceva o mostrava qualcosa di completamente diverso. E poi i brani: inseriti quasi casualmente nel video... <br>
       <img src="https://live.staticflickr.com/65535/50061892601_64b93002ef.jpg" style="float: right; width: 300px; margin: 5px;">Non so, da come era descritto nel <a href="https://www.globalpride2020.org/">sito ufficiale</a> mi aspettavo di meglio...<br>
